[package]
name        = "anycat"
version     = "0.2.0"
authors     = ["Xavier GILLARD <xaviergillard@gmail.com>"]
description = "Anycat is an extremely simple crate and tool that lets you unpack some single file archive and print its content to the standard output (or process it as a regular `BufRead`)."

homepage    = "https://github.com/xgillard/anycat"
repository  = "https://github.com/xgillard/anycat.git"
readme      = "README.md"

categories  = [ "command-line-utilities", "compression" ]
license     = "MIT"

maintenance = { status = "as-is" }

[dependencies]
clap   = "2.28.0"

flate2 = "1.0.20"
bzip2  = "0.4.1"
xz2    = "0.1.6"
brotli2= "0.3.2"
